tide up result saving functions

--- a/notebooks/result_inspection.ipynb
+++ b/notebooks/result_inspection.ipynb
@@ -270,6 +270,274 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>train_roc_auc</th>\n",
+       "      <th>train_ap</th>\n",
+       "      <th>train_mapr</th>\n",
+       "      <th>train_f1</th>\n",
+       "      <th>train_r2</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>test_roc_auc</th>\n",
+       "      <th>test_ap</th>\n",
+       "      <th>test_mapr</th>\n",
+       "      <th>test_f1</th>\n",
+       "      <th>test_r2</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNeighborsClassifier(n_neighbors=3)</td>\n",
+       "      <td>0.893266</td>\n",
+       "      <td>0.861904</td>\n",
+       "      <td>0.891651</td>\n",
+       "      <td>3.129292e+14</td>\n",
+       "      <td>0.924096</td>\n",
+       "      <td>0.503669</td>\n",
+       "      <td>0.779633</td>\n",
+       "      <td>0.723974</td>\n",
+       "      <td>0.801114</td>\n",
+       "      <td>6.014824e+14</td>\n",
+       "      <td>0.844706</td>\n",
+       "      <td>-0.023296</td>\n",
+       "      <td>0.779633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVC(C=0.025, kernel='linear')</td>\n",
+       "      <td>0.734957</td>\n",
+       "      <td>0.597211</td>\n",
+       "      <td>0.731585</td>\n",
+       "      <td>1.087187e+15</td>\n",
+       "      <td>0.833483</td>\n",
+       "      <td>-0.232500</td>\n",
+       "      <td>0.736227</td>\n",
+       "      <td>0.597104</td>\n",
+       "      <td>0.730768</td>\n",
+       "      <td>1.097705e+15</td>\n",
+       "      <td>0.834728</td>\n",
+       "      <td>-0.224854</td>\n",
+       "      <td>0.736227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SVC(C=1, gamma=2)</td>\n",
+       "      <td>0.940544</td>\n",
+       "      <td>0.908148</td>\n",
+       "      <td>0.923181</td>\n",
+       "      <td>2.516338e+14</td>\n",
+       "      <td>0.958312</td>\n",
+       "      <td>0.723520</td>\n",
+       "      <td>0.777963</td>\n",
+       "      <td>0.675137</td>\n",
+       "      <td>0.771431</td>\n",
+       "      <td>8.495939e+14</td>\n",
+       "      <td>0.854645</td>\n",
+       "      <td>-0.031048</td>\n",
+       "      <td>0.777963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GaussianProcessClassifier(kernel=1**2 * RBF(le...</td>\n",
+       "      <td>0.857450</td>\n",
+       "      <td>0.800959</td>\n",
+       "      <td>0.848342</td>\n",
+       "      <td>4.935894e+14</td>\n",
+       "      <td>0.901728</td>\n",
+       "      <td>0.337115</td>\n",
+       "      <td>0.799666</td>\n",
+       "      <td>0.719813</td>\n",
+       "      <td>0.797221</td>\n",
+       "      <td>6.992233e+14</td>\n",
+       "      <td>0.864865</td>\n",
+       "      <td>0.069731</td>\n",
+       "      <td>0.799666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DecisionTreeClassifier(max_depth=5)</td>\n",
+       "      <td>0.779370</td>\n",
+       "      <td>0.662544</td>\n",
+       "      <td>0.765019</td>\n",
+       "      <td>9.162051e+14</td>\n",
+       "      <td>0.858586</td>\n",
+       "      <td>-0.025973</td>\n",
+       "      <td>0.729549</td>\n",
+       "      <td>0.598010</td>\n",
+       "      <td>0.731275</td>\n",
+       "      <td>1.067631e+15</td>\n",
+       "      <td>0.828390</td>\n",
+       "      <td>-0.255863</td>\n",
+       "      <td>0.729549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>RandomForestClassifier(max_depth=5, max_featur...</td>\n",
+       "      <td>0.770774</td>\n",
+       "      <td>0.638850</td>\n",
+       "      <td>0.752418</td>\n",
+       "      <td>1.006535e+15</td>\n",
+       "      <td>0.855986</td>\n",
+       "      <td>-0.065946</td>\n",
+       "      <td>0.749583</td>\n",
+       "      <td>0.609722</td>\n",
+       "      <td>0.736952</td>\n",
+       "      <td>1.082668e+15</td>\n",
+       "      <td>0.843750</td>\n",
+       "      <td>-0.162836</td>\n",
+       "      <td>0.749583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>MLPClassifier(alpha=1, max_iter=1000)</td>\n",
+       "      <td>0.779370</td>\n",
+       "      <td>0.683096</td>\n",
+       "      <td>0.776640</td>\n",
+       "      <td>8.097446e+14</td>\n",
+       "      <td>0.854167</td>\n",
+       "      <td>-0.025973</td>\n",
+       "      <td>0.736227</td>\n",
+       "      <td>0.624521</td>\n",
+       "      <td>0.744728</td>\n",
+       "      <td>9.548533e+14</td>\n",
+       "      <td>0.827887</td>\n",
+       "      <td>-0.224854</td>\n",
+       "      <td>0.736227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AdaBoostClassifier()</td>\n",
+       "      <td>0.788682</td>\n",
+       "      <td>0.702330</td>\n",
+       "      <td>0.787649</td>\n",
+       "      <td>7.452231e+14</td>\n",
+       "      <td>0.858513</td>\n",
+       "      <td>0.017331</td>\n",
+       "      <td>0.734558</td>\n",
+       "      <td>0.636292</td>\n",
+       "      <td>0.751009</td>\n",
+       "      <td>8.871866e+14</td>\n",
+       "      <td>0.823137</td>\n",
+       "      <td>-0.232606</td>\n",
+       "      <td>0.734558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GaussianNB()</td>\n",
+       "      <td>0.727077</td>\n",
+       "      <td>0.622615</td>\n",
+       "      <td>0.744604</td>\n",
+       "      <td>9.258833e+14</td>\n",
+       "      <td>0.819517</td>\n",
+       "      <td>-0.269142</td>\n",
+       "      <td>0.701169</td>\n",
+       "      <td>0.596088</td>\n",
+       "      <td>0.730580</td>\n",
+       "      <td>9.698904e+14</td>\n",
+       "      <td>0.801332</td>\n",
+       "      <td>-0.387651</td>\n",
+       "      <td>0.701169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>QuadraticDiscriminantAnalysis()</td>\n",
+       "      <td>0.755014</td>\n",
+       "      <td>0.654159</td>\n",
+       "      <td>0.760999</td>\n",
+       "      <td>8.678140e+14</td>\n",
+       "      <td>0.838221</td>\n",
+       "      <td>-0.139230</td>\n",
+       "      <td>0.732888</td>\n",
+       "      <td>0.632189</td>\n",
+       "      <td>0.748841</td>\n",
+       "      <td>9.022236e+14</td>\n",
+       "      <td>0.822616</td>\n",
+       "      <td>-0.240358</td>\n",
+       "      <td>0.732888</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Unnamed: 0  train_accuracy   \n",
+       "0                KNeighborsClassifier(n_neighbors=3)        0.893266  \\\n",
+       "1                      SVC(C=0.025, kernel='linear')        0.734957   \n",
+       "2                                  SVC(C=1, gamma=2)        0.940544   \n",
+       "3  GaussianProcessClassifier(kernel=1**2 * RBF(le...        0.857450   \n",
+       "4                DecisionTreeClassifier(max_depth=5)        0.779370   \n",
+       "5  RandomForestClassifier(max_depth=5, max_featur...        0.770774   \n",
+       "6              MLPClassifier(alpha=1, max_iter=1000)        0.779370   \n",
+       "7                               AdaBoostClassifier()        0.788682   \n",
+       "8                                       GaussianNB()        0.727077   \n",
+       "9                    QuadraticDiscriminantAnalysis()        0.755014   \n",
+       "\n",
+       "   train_roc_auc  train_ap    train_mapr  train_f1  train_r2  test_accuracy   \n",
+       "0       0.861904  0.891651  3.129292e+14  0.924096  0.503669       0.779633  \\\n",
+       "1       0.597211  0.731585  1.087187e+15  0.833483 -0.232500       0.736227   \n",
+       "2       0.908148  0.923181  2.516338e+14  0.958312  0.723520       0.777963   \n",
+       "3       0.800959  0.848342  4.935894e+14  0.901728  0.337115       0.799666   \n",
+       "4       0.662544  0.765019  9.162051e+14  0.858586 -0.025973       0.729549   \n",
+       "5       0.638850  0.752418  1.006535e+15  0.855986 -0.065946       0.749583   \n",
+       "6       0.683096  0.776640  8.097446e+14  0.854167 -0.025973       0.736227   \n",
+       "7       0.702330  0.787649  7.452231e+14  0.858513  0.017331       0.734558   \n",
+       "8       0.622615  0.744604  9.258833e+14  0.819517 -0.269142       0.701169   \n",
+       "9       0.654159  0.760999  8.678140e+14  0.838221 -0.139230       0.732888   \n",
+       "\n",
+       "   test_roc_auc   test_ap     test_mapr   test_f1   test_r2     score  \n",
+       "0      0.723974  0.801114  6.014824e+14  0.844706 -0.023296  0.779633  \n",
+       "1      0.597104  0.730768  1.097705e+15  0.834728 -0.224854  0.736227  \n",
+       "2      0.675137  0.771431  8.495939e+14  0.854645 -0.031048  0.777963  \n",
+       "3      0.719813  0.797221  6.992233e+14  0.864865  0.069731  0.799666  \n",
+       "4      0.598010  0.731275  1.067631e+15  0.828390 -0.255863  0.729549  \n",
+       "5      0.609722  0.736952  1.082668e+15  0.843750 -0.162836  0.749583  \n",
+       "6      0.624521  0.744728  9.548533e+14  0.827887 -0.224854  0.736227  \n",
+       "7      0.636292  0.751009  8.871866e+14  0.823137 -0.232606  0.734558  \n",
+       "8      0.596088  0.730580  9.698904e+14  0.801332 -0.387651  0.701169  \n",
+       "9      0.632189  0.748841  9.022236e+14  0.822616 -0.240358  0.732888  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"../classifiers/results/lbp_40Xbinary.csv\")\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
