AlexNet extractor Done

--- a/notebooks/ResNet18extract.ipynb
+++ b/notebooks/ResNet18extract.ipynb
@@ -5,6 +5,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Class function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torchvision.models as models\n",
+    "import cv2 as cv\n",
+    "\n",
+    "\n",
+    "class ResNet():\n",
+    "    def __init__(self, weights='ImageNet', last_layer_ind=-3):\n",
+    "        \n",
+    "        if weights == 'ImageNet':\n",
+    "            pretrained_model = models.resnet18(pretrained=True)\n",
+    "\n",
+    "        self.layer = list(pretrained_model.children())[:-3]\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return 'resnet18'\n",
+    "    \n",
+    "    def describe(self, image_path):\n",
+    "        # Requires image to be Pillow.\n",
+    "\n",
+    "        # Load the image and apply the necessary transformations\n",
+    "        image = Image.open(image_path).convert('RGB')\n",
+    "        transform = transforms.Compose([\n",
+    "            transforms.Resize(256),\n",
+    "            transforms.CenterCrop(224),\n",
+    "            transforms.ToTensor(),\n",
+    "            transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "            ])\n",
+    "        image = transform(image)\n",
+    "        image = image.unsqueeze(0)  # Add batch dimension\n",
+    "\n",
+    "        model = nn.Sequential(*self.layer)\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "                features = model(image)\n",
+    "\n",
+    "        return features.squeeze()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    image_path = \"C:/Users/hadil/Documents/projects/Machine Learning/project/breast/benign/SOB/adenosis/SOB_B_A_14-22549AB/40X/SOB_B_A-14-22549AB-40-001.png\"\n",
+    "    pretrained_model = models.resnet18(pretrained=True)\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "obj = ResNet('ImageNet', -3)\n",
+    "obj.describe(image_path)\n",
+    "features = obj.describe(image_path)\n",
+    "\n",
+    "# Create a 16x32 grid of subplots (to fit all 512 features)\n",
+    "fig, axs = plt.subplots(nrows=16, ncols=16, figsize=(16, 8))\n",
+    "\n",
+    "# Loop over the features and plot each one as an image in a subplot\n",
+    "for i in range(len(features)):\n",
+    "    row = i // 16\n",
+    "    col = i % 16\n",
+    "    axs[row, col].imshow(features[i], cmap='gray')\n",
+    "    axs[row, col].axis('off')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Import libraries"
    ]
   },
