hog train results

--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['c:\\\\Users\\\\user\\\\Dersler\\\\Machine and Deep Learning\\\\Project\\\\breast_histopathology_clf\\\\notebooks', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\python38.zip', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\DLLs', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\lib', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit', '', 'C:\\\\Users\\\\user\\\\AppData\\\\Roaming\\\\Python\\\\Python38\\\\site-packages', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\lib\\\\site-packages', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\user\\\\anaconda3\\\\envs\\\\breakkit\\\\lib\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\user\\\\Dersler\\\\Machine and Deep Learning\\\\Project\\\\breast_histopathology_clf']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Any\n",
     "from torch.utils.data import Dataset\n",
@@ -29,9 +21,8 @@
     "parent_dir = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "# Add the parent directory to the Python path\n",
     "sys.path.append(parent_dir)\n",
-    "print(sys.path)\n",
     "from tools import BreaKHis\n",
-    "from torchvision import transforms\n",
+    "from torchvision import transforms as T\n",
     "from PIL import Image\n",
     "import torch \n",
     "import matplotlib.pyplot as plt"
@@ -39,25 +30,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 588/588 [00:06<00:00, 86.87it/s]\n",
-      "100%|██████████| 1232/1232 [00:13<00:00, 94.29it/s]\n"
+      "100%|██████████| 625/625 [00:04<00:00, 137.53it/s]\n",
+      "100%|██████████| 1370/1370 [00:10<00:00, 125.66it/s]\n",
+      "<__array_function__ internals>:180: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/user/Dersler/Machine and Deep Learning/Project/breast_histopathology_clf/features/all/binary\\40X\\imagelike\\hog\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hog: 100%|██████████| 1995/1995 [00:04<00:00, 437.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1995, 700, 456, 3) (1995, 512, 256)\n",
+      "256 512\n",
+      "(1995, 512, 256, 3) (1995, 512, 256, 1)\n"
      ]
     }
    ],
    "source": [
-    "myDataset = BreaKHis(root='C:\\\\Users\\\\user\\\\Dersler\\\\Machine and Deep Learning\\\\Project\\\\BreaKHis_v1\\\\',\n",
-    "                transform=transforms.Compose([\n",
-    "                        transforms.ToTensor(),\n",
-    "                    ]),\n",
-    "                    mf= '400X'\n",
-    ")"
+    "myDataset = BreaKHis(\n",
+    "    root='C:/Users/user/Dersler/Machine and Deep Learning/Project/BreaKHis_v1/',\n",
+    "                transform = T.Compose([\n",
+    "                T.ToPILImage(),  # Convert numpy.ndarray to PIL Image\n",
+    "                T.Resize(256),\n",
+    "                T.CenterCrop(224),\n",
+    "                T.ToTensor(),\n",
+    "                # T.Normalize(mean=np.concatenate([mean_per_ch, [1]]), std=np.concatenate([std_per_ch, [0]]))\n",
+    "            ]),\n",
+    "                mode = 'binary',\n",
+    "                mf='100X',\n",
+    "                imageLikefeatures = ['hog']\n",
+    "                )\n"
    ]
   },
   {
@@ -94,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[29.4867471  51.11873185 36.35026414]\n"
+      "[27.20559103 38.09480701 27.6129065   5.38890665]\n"
      ]
     }
    ],
@@ -119,8 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1995, 700, 456, 3)\n",
-      "[196.90156367 166.25184329 204.76493343]\n"
+      "(1995, 512, 256, 4)\n",
+      "[196.77829224 166.12919264 204.64232438   2.34070158]\n"
      ]
     }
    ],
