--- a/notebooks/train_nch.ipynb
+++ b/notebooks/train_nch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,32 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([64, 3, 7, 7])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "torch.Size([64, 4, 3, 3])"
+       "Conv2d(3, 32, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = model_dict['resnet18']\n",
-    "print(model.conv1.weight.shape)\n",
-    "model.conv1.weight.data = new_weights\n",
-    "model.conv1.weight.shape "
+    "model = model_dict['mobilenet']\n",
+    "model.features[0][0]"
    ]
   },
   {
