--- a/notebooks/train_nch.ipynb
+++ b/notebooks/train_nch.ipynb
@@ -187,59 +187,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 625/625 [00:03<00:00, 156.42it/s]\n",
-      "100%|██████████| 1370/1370 [00:09<00:00, 140.29it/s]\n",
-      "h: 0it [00:00, ?it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "??\n"
+      "features.0.weight\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[159], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m myDataset \u001b[39m=\u001b[39m BreaKHis(\n\u001b[0;32m      2\u001b[0m     root\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mC:/Users/user/Dersler/Machine and Deep Learning/Project/BreaKHis_v1/\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      3\u001b[0m                 transform \u001b[39m=\u001b[39;49m T\u001b[39m.\u001b[39;49mCompose([\n\u001b[0;32m      4\u001b[0m                 T\u001b[39m.\u001b[39;49mToPILImage(),  \u001b[39m# Convert numpy.ndarray to PIL Image\u001b[39;49;00m\n\u001b[0;32m      5\u001b[0m                 T\u001b[39m.\u001b[39;49mResize(\u001b[39m256\u001b[39;49m),\n\u001b[0;32m      6\u001b[0m                 T\u001b[39m.\u001b[39;49mCenterCrop(\u001b[39m224\u001b[39;49m),\n\u001b[0;32m      7\u001b[0m                 T\u001b[39m.\u001b[39;49mToTensor(),\n\u001b[0;32m      8\u001b[0m                 T\u001b[39m.\u001b[39;49mNormalize(mean\u001b[39m=\u001b[39;49m[\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m ,\u001b[39m0\u001b[39;49m ,\u001b[39m0\u001b[39;49m], std\u001b[39m=\u001b[39;49m[\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m ,\u001b[39m0\u001b[39;49m ,\u001b[39m0\u001b[39;49m])\n\u001b[0;32m      9\u001b[0m             ]),\n\u001b[0;32m     10\u001b[0m                 mode \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mbinary\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     11\u001b[0m                 imageLikefeatures \u001b[39m=\u001b[39;49m [\u001b[39m'\u001b[39;49m\u001b[39mhog\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m     12\u001b[0m                 )\n",
-      "File \u001b[1;32mc:\\Users\\user\\Dersler\\Machine and Deep Learning\\Project\\breast_histopathology_clf\\tools.py:182\u001b[0m, in \u001b[0;36mBreaKHis.__init__\u001b[1;34m(self, root, mf, mode, transform, target_transform, shuffle, imageLikefeatures)\u001b[0m\n\u001b[0;32m    180\u001b[0m \u001b[39mfor\u001b[39;00m i, imageLikefeature \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(imageLikefeatures):\n\u001b[0;32m    181\u001b[0m     features \u001b[39m=\u001b[39m read_imageLikefeature(imageLikefeature[\u001b[39m0\u001b[39m], \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfnames)\n\u001b[1;32m--> 182\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimages \u001b[39m=\u001b[39m conc(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mimages, features, different_sizes\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "File \u001b[1;32mc:\\Users\\user\\Dersler\\Machine and Deep Learning\\Project\\breast_histopathology_clf\\tools.py:119\u001b[0m, in \u001b[0;36mconc\u001b[1;34m(images, imageLikeFeatures, different_sizes)\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m??\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    118\u001b[0m \u001b[39m# Find the minimum size.\u001b[39;00m\n\u001b[1;32m--> 119\u001b[0m min_height \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(images\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], imageLikeFeatures\u001b[39m.\u001b[39;49mshape[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m    120\u001b[0m min_width \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(images\u001b[39m.\u001b[39mshape[\u001b[39m2\u001b[39m], imageLikeFeatures\u001b[39m.\u001b[39mshape[\u001b[39m2\u001b[39m])\n\u001b[0;32m    121\u001b[0m \u001b[39mprint\u001b[39m(min_width, min_height)\n",
-      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[[[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]]],\n",
+       "\n",
+       "\n",
+       "        [[[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]]],\n",
+       "\n",
+       "\n",
+       "        [[[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]]],\n",
+       "\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "\n",
+       "        [[[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]]],\n",
+       "\n",
+       "\n",
+       "        [[[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]]],\n",
+       "\n",
+       "\n",
+       "        [[[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]],\n",
+       "\n",
+       "         [[True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          ...,\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True],\n",
+       "          [True, True, True,  ..., True, True, True]]]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "myDataset = BreaKHis(\n",
-    "    root='C:/Users/user/Dersler/Machine and Deep Learning/Project/BreaKHis_v1/',\n",
-    "                transform = T.Compose([\n",
-    "                T.ToPILImage(),  # Convert numpy.ndarray to PIL Image\n",
-    "                T.Resize(256),\n",
-    "                T.CenterCrop(224),\n",
-    "                T.ToTensor(),\n",
-    "                T.Normalize(mean=[0, 0 ,0 ,0], std=[0, 0 ,0 ,0])\n",
-    "            ]),\n",
-    "                mode = 'binary',\n",
-    "                imageLikefeatures = ['hog']\n",
-    "                )"
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "import torch.nn.init as init\n",
+    "import torchvision.models as models\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the pre-trained AlexNet model\n",
+    "model = models.alexnet(weights=None)\n",
+    "\n",
+    "# Assign the initialized weights back to the model\n",
+    "for name, param in model.named_parameters():\n",
+    "    print(name)\n",
+    "    orig = model.state_dict()[name]\n",
+    "\n",
+    "    if 'weight' in name:\n",
+    "        param.requiresGrad = True  # Ensure the parameter is set to be optimized\n",
+    "        param = init.dirac_(param)\n",
+    "        model.state_dict()[name] = param\n",
+    "        break\n",
+    "orig == model.state_dict()[name]"
    ]
   },
   {
